Added search bar at the top of every Activity that have Dialogs Recycler

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.therman.gothicsoundboard">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:name=".GothicSoundboard"
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.SettingsActivity"></activity>
         <activity android:name=".activities.SearchResultActivity" />
-        <activity android:name=".activities.SearchActivity" />
+        <activity android:name=".activities.FilterActivity" />
         <activity android:name=".activities.ExploreActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
